docs/envoy/v1.24.12/_sources/intro/arch_overview/security/external_dep_test_only.rst.txt
External dependencies: ``test_only``
====================================

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Benchmark <https://github.com/google/benchmark>`__, `1.7.0 <https://github.com/google/benchmark/releases/tag/v1.7.0>`__, 2022-07-25, , `Apache-2.0 <https://github.com/google/benchmark/blob/v1.7.0/LICENSE>`__
  `compiler-rt <https://compiler-rt.llvm.org>`__, `14.0.0 <https://github.com/llvm/llvm-project/releases/tag/llvmorg-14.0.0>`__, 2022-03-23, `cpe:2.3:a:llvm:compiler-rt:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Allvm%3Acompiler-rt%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/llvm/llvm-project/blob/llvmorg-14.0.0/compiler-rt/LICENSE.TXT>`__
  `Emscripten SDK <https://github.com/emscripten-core/emsdk>`__, `0ea8f8a <https://github.com/emscripten-core/emsdk/tree/0ea8f8a8707070e9a7c83fbb4a3065683bcf1799>`__, 2022-03-09, , `Emscripten SDK <https://github.com/emscripten-core/emsdk/blob/0ea8f8a8707070e9a7c83fbb4a3065683bcf1799/LICENSE>`__
  `Fuzzing Rules for Bazel <https://github.com/bazelbuild/rules_fuzzing>`__, `0.3.1 <https://github.com/bazelbuild/rules_fuzzing/releases/tag/v0.3.1>`__, 2022-01-24, , `Apache-2.0 <https://github.com/bazelbuild/rules_fuzzing/blob/v0.3.1/LICENSE>`__
  `Google Test <https://github.com/google/googletest>`__, `a4ab0ab <https://github.com/google/googletest/tree/a4ab0abb93620ce26efad9de9296b73b16e88588>`__, 2020-09-10, `cpe:2.3:a:google:google_test:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Agoogle_test%3A%2A&search_type=all>`__, `BSD-3-Clause <https://github.com/google/googletest/blob/a4ab0abb93620ce26efad9de9296b73b16e88588/LICENSE>`__
  `Kafka (Python client) <https://kafka.apache.org>`__, `2.0.2 <https://github.com/dpkp/kafka-python/releases/tag/2.0.2>`__, 2020-09-30, , `Apache-2.0 <https://github.com/dpkp/kafka-python/blob/2.0.2/LICENSE>`__
  `Kafka (server binary) <https://kafka.apache.org>`__, `3.5.1 <https://archive.apache.org/dist/kafka/3.5.1/kafka_2.13-3.5.1.tgz>`__, 2023-07-21, , 
  `libprotobuf-mutator <https://github.com/google/libprotobuf-mutator>`__, `1.0 <https://github.com/google/libprotobuf-mutator/releases/tag/v1.0>`__, 2020-11-13, , `Apache-2.0 <https://github.com/google/libprotobuf-mutator/blob/v1.0/LICENSE>`__
  `WebAssembly for Proxies (Rust SDK) <https://github.com/proxy-wasm/proxy-wasm-rust-sdk>`__, `0.2.1 <https://github.com/proxy-wasm/proxy-wasm-rust-sdk/releases/tag/v0.2.1>`__, 2022-11-22, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-rust-sdk/blob/v0.2.1/LICENSE>`__

