docs/envoy/v1.29.10/_sources/intro/arch_overview/security/external_dep_test_only.rst.txt
External dependencies: ``test_only``
====================================

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Bazel build tools <https://github.com/bazelbuild/buildtools>`__, `6.4.0 <https://github.com/bazelbuild/buildtools/releases/tag/v6.4.0>`__, 2023-11-15, , 
  `Benchmark <https://github.com/google/benchmark>`__, `1.8.3 <https://github.com/google/benchmark/releases/tag/v1.8.3>`__, 2023-08-31, , `Apache-2.0 <https://github.com/google/benchmark/blob/v1.8.3/LICENSE>`__
  `compiler-rt <https://compiler-rt.llvm.org>`__, `14.0.0 <https://github.com/llvm/llvm-project/releases/tag/llvmorg-14.0.0>`__, 2022-03-23, `cpe:2.3:a:llvm:compiler-rt:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Allvm%3Acompiler-rt%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/llvm/llvm-project/blob/llvmorg-14.0.0/compiler-rt/LICENSE.TXT>`__
  `Emscripten SDK <https://github.com/emscripten-core/emsdk>`__, `0ea8f8a <https://github.com/emscripten-core/emsdk/tree/0ea8f8a8707070e9a7c83fbb4a3065683bcf1799>`__, 2022-03-09, , `Emscripten SDK <https://github.com/emscripten-core/emsdk/blob/0ea8f8a8707070e9a7c83fbb4a3065683bcf1799/LICENSE>`__
  `envoy_examples <https://github.com/envoyproxy/examples>`__, `8c8748b <https://github.com/envoyproxy/examples/tree/8c8748bb024740df7c294a84780930df1488f7db>`__, 2024-09-20, , `Apache-2.0 <https://github.com/envoyproxy/examples/blob/8c8748bb024740df7c294a84780930df1488f7db/LICENSE>`__
  `Fuzzing Rules for Bazel <https://github.com/bazelbuild/rules_fuzzing>`__, `0.4.1 <https://github.com/bazelbuild/rules_fuzzing/releases/tag/v0.4.1>`__, 2023-10-19, , `Apache-2.0 <https://github.com/bazelbuild/rules_fuzzing/blob/v0.4.1/LICENSE>`__
  `Google Test <https://github.com/google/googletest>`__, `a4ab0ab <https://github.com/google/googletest/tree/a4ab0abb93620ce26efad9de9296b73b16e88588>`__, 2020-09-10, `cpe:2.3:a:google:google_test:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Agoogle_test%3A%2A&search_type=all>`__, `BSD-3-Clause <https://github.com/google/googletest/blob/a4ab0abb93620ce26efad9de9296b73b16e88588/LICENSE>`__
  `Kafka (Python client) <https://kafka.apache.org>`__, `2.0.2 <https://github.com/dpkp/kafka-python/releases/tag/2.0.2>`__, 2020-09-30, , `Apache-2.0 <https://github.com/dpkp/kafka-python/blob/2.0.2/LICENSE>`__
  `Kafka (server binary) <https://kafka.apache.org>`__, `3.5.1 <https://archive.apache.org/dist/kafka/3.5.1/kafka_2.13-3.5.1.tgz>`__, 2023-07-21, , 
  `libpfm <https://sourceforge.net/projects/perfmon2>`__, `4.11.0 <https://downloads.sourceforge.net/project/perfmon2/libpfm4/libpfm-4.11.0.tar.gz>`__, 2020-09-03, , 
  `libprotobuf-mutator <https://github.com/google/libprotobuf-mutator>`__, `3b28530 <https://github.com/google/libprotobuf-mutator/tree/3b28530531b154a748fe9884bc9219b4966f0754>`__, 2023-04-25, , `Apache-2.0 <https://github.com/google/libprotobuf-mutator/blob/v3b28530531b154a748fe9884bc9219b4966f0754/LICENSE>`__
  `WebAssembly for Proxies (Rust SDK) <https://github.com/proxy-wasm/proxy-wasm-rust-sdk>`__, `0.2.1 <https://github.com/proxy-wasm/proxy-wasm-rust-sdk/releases/tag/v0.2.1>`__, 2022-11-22, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-rust-sdk/blob/v0.2.1/LICENSE>`__

